--- a/contacts.html
+++ b/contacts.html
@@ -18,7 +18,8 @@
             <div class="header__content">
 
                 <a class="header__title-link" href="main-page.html">
-                    <h1 class="header__title">Веб-разработка</h1>
+                    <!-- <h1 class="header__title">Веб-разработка</h1> -->
+                    Веб-разработка
                 </a>
 
                 <nav class="stroke" id="menu">
@@ -27,10 +28,10 @@
                             <a class="item__link" href="main-page.html">Главная</a>
                         </li>
                         <li class="nav__item">
-                            <a class="item__link item__link--active" href="portfolio-page.html">Портфолио</a>
+                            <a class="item__link" href="portfolio-page.html">Портфолио</a>
                         </li>
                         <li class="nav__item">
-                            <a class="item__link" href="contacts.html">Контакты</a>
+                            <a class="item__link  item__link--active" href="contacts.html">Контакты</a>
                         </li>
                     </ul>
                 </nav>
@@ -57,24 +58,41 @@
 
                             <li class="list__item">
 
-                                <p>Email</p>
+                                <p>Email:&nbsp;</p>
                                 <a href="mailto:nikulans@gmail.com">nikulans@gmail.com</a>
 
                             </li>
                             <li class="list__item">
 
-                                <p>Мобильный</p>
+                                <p>Мобильный:&nbsp;</p>
                                 <a href="tel:89885352753">+79885352753</a>
 
                             </li>
                             <li class="list__item">
 
-                                <p>Адрес</p>
-                                <з href="mailto:nikulans@gmail.com">nikulans@gmail.com</з>
+                                <p>Адрес:&nbsp;</p>
+                                <a href="mailto:nikulans@gmail.com">nikulans@gmail.com</a>
 
                             </li>
 
                         </ul>
+
+                    </div>
+
+                    <div class="contacts__right">
+
+                        <h2 class="contacts__title">Напишите нам</h2>
+
+                        <div class="contacts__form">
+
+                            <input type="text" class="form__input" placeholder="Ваше имя">
+                            <input type="text" class="form__input" placeholder="Ваше email">
+                            <!-- <input type="text" class="form__input" placeholder="Подробнее"> -->
+                            <textarea name="" id="" cols="30" rows="10" class="form__input" placeholder="Подробнее"></textarea>
+                            <input type="file" class="form__upload">
+                            <submit class="form__submit">Отправить</submit>
+
+                        </div>
 
                     </div>
 
