--- a/portfolio-page.html
+++ b/portfolio-page.html
@@ -18,7 +18,8 @@
             <div class="header__content">
 
                 <a class="header__title-link" href="main-page.html">
-                    <h1 class="header__title">Веб-разработка</h1>
+                    <!-- <h1 class="header__title">Веб-разработка</h1> -->
+                    Веб-разработка
                 </a>
 
                 <nav class="stroke" id="menu">
